@@ -14,7 +14,7 @@ import time
 from StringIO import StringIO
 import tempfile
 
-from util import raises, with_tempdir, with_app
+from util import raises, with_tempdir, with_app, SkipTest
 
 from sphinx import application
 from sphinx import quickstart as qs
@@ -114,7 +114,12 @@ def test_do_prompt_with_multibyte():
         'Q1': u'\u30c9\u30a4\u30c4',
     }
     qs.term_input = mock_raw_input(answers)
-    qs.do_prompt(d, 'k1', 'Q1', default=u'\u65e5\u672c')
+    try:
+        qs.do_prompt(d, 'k1', 'Q1', default=u'\u65e5\u672c')
+    except UnicodeEncodeError:
+        raise SkipTest(
+            'multibyte console input did not support on this encoding: %s',
+            qs.TERM_ENCODING)
     assert d['k1'] == u'\u30c9\u30a4\u30c4'
 
 
